Some changes in the Day pattern